fix(core/dropdownbutton): dropdown alignment (#694)

--- a/packages/core/src/components/dropdown-button/dropdown-button.scss
+++ b/packages/core/src/components/dropdown-button/dropdown-button.scss
@@ -100,12 +100,6 @@
     }
   }
 
-  .dropdown {
-    width: auto !important;
-    inset: auto !important;
-    transform: unset !important;
-  }
-
   .content {
     display: flex;
     align-items: center;
